# cirious_codex_result

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: advanced_chaining.rs  basic_usage.rs  error_conversion.rs  manual_propagation.rs  validation_flow.rs
src/: error.rs  lib.rs  macros.rs  ok.rs
tests/: conversion_test.rs  integration_test.rs  integration_tests.rs  ok_macro_test.rs  propagation_test.rs  validation_test.rs
