[package]
name = "cirious_codex_result"
version = "0.1.0"
edition = "2021"
authors = ["Cirious Studio <cirious.studio@proton.me>"]
description = "Robust result and error handling framework for the Cirious Codex ecosystem."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cirious-studio/cirious_codex_result"
homepage = "https://github.com/cirious-studio/cirious_codex_result"
documentation = "https://docs.rs/cirious_codex_result"
keywords = ["error-handling", "result", "diagnostic", "codex", "cirious"]
categories = ["rust-patterns", "development-tools::debugging"]

[lints.rust]
missing_docs = "warn"

[dependencies]
