[package]
name = "cirious_codex_result"
version = "0.2.0"
edition = "2021"
authors = ["Cirious Studio <cirious.studio@proton.me>"]
description = "Robust result and error handling framework for the Cirious Codex ecosystem."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cirious-studio/cirious_codex_result"
homepage = "https://github.com/cirious-studio/cirious_codex_result"
documentation = "https://docs.rs/cirious_codex_result"
keywords = ["error-handling", "result", "diagnostic", "codex", "cirious"]
categories = ["rust-patterns", "development-tools::debugging"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
